home/container-orchestration/kubernetes/tasket_kubernetes_container_orchestration/task-aws-018-kong-ingress-on-eks/httpbin-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - http:
        paths:
          - path: /foo
            backend:
              serviceName: httpbin
              servicePort: 80
          - path: /bar
            backend:
              serviceName: echo
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-2
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - http:
        paths:
          - path: /baz
            backend:
              serviceName: httpbin
              servicePort: 80
